# DRAMSim2

./: AddressMapping.cpp  AddressMapping.hpp  Bank.cpp  Bank.hpp  BankState.cpp  BankState.hpp  BusPacket.cpp  BusPacket.hpp  CMakeLists.txt  CSVWriter.hpp  Callback.hpp  ClockDomain.cpp  ClockDomain.hpp  CommandQueue.cpp  CommandQueue.hpp  DRAMSim.hpp  IniReader.cpp  IniReader.hpp  MemoryController.cpp  MemoryController.hpp  MemorySystem.cpp  MemorySystem.hpp  MultiChannelMemorySystem.cpp  MultiChannelMemorySystem.hpp  PrintMacros.cpp  PrintMacros.hpp  README  Rank.cpp  Rank.hpp  SimulatorObject.cpp  SimulatorObject.hpp  SystemConfiguration.cpp  SystemConfiguration.hpp  TraceBasedSim.cpp  Transaction.cpp  Transaction.hpp  addgpl.sh
example_app/: CMakeLists.txt  dramsim_test.cpp  dramsim_test.hpp
traces/: traceParse.py
